# GameProject

./: CMakeLists.txt
src/: main.cpp
src/controller/: GameController.cpp  GameController.h  GameWorld.cpp  GameWorld.h  MainController.cpp  MainController.h
src/model/: Object.h
src/model/GameObject/: GameObject.h
src/model/GameObject/Sprite/: Sprite.h
src/model/MathLogic/Figure/: Figure.h
src/model/MathLogic/Figure/Collider/: Collider.h
src/model/MathLogic/Point/: Point.cpp
src/model/MathLogic/RecArea/: RecArea.h
src/model/Point/: Point.h
src/model/RecArea/: RecArea.h
src/view/: GameView.cpp  GameView.h  ObjectView.cpp  ObjectView.h
